fix: increase color contrast for text on login page

--- a/assets/src/styles/login-form.scss
+++ b/assets/src/styles/login-form.scss
@@ -90,7 +90,7 @@
 
 .pb-saml-or span {
   background: #fff;
-  color: #777;
+  color: #555;
   position: relative;
   padding: 0 8px;
   text-transform: uppercase
